--- a/style.css
+++ b/style.css
@@ -1,45 +1,32 @@
-div {
+.flex {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.flex > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    border: 1px solid #000000;
     margin: 5px;
-    border: 1px solid #bebebe;
 }
 
-.flex-container {
-    display: flex;
-    flex-direction: column;
+@media screen and (max-width: 600px) {
+    #el-5 {
+        display: none;
+    }
 }
 
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+@media screen and (min-width: 600px) and (max-width: 700px) {
+    .flex {
+        flex-flow: column nowrap;
+    }
 
-.main {
-    display: flex;
-    flex-direction: row;
-}
+    .flex > div {
+        background-color: rgba(255, 0, 0, .3);
+    }
 
-.content {
-    display: flex;
-    flex-direction: column;
-}
 
-.top-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.top-content > div {
-    padding: 20px;
-}
-
-.bottom-content {
-    display: flex;
-    flex-direction: row;
-}
-
-.bottom-content-2 {
-    display: flex;
-    flex-direction: column;
 }
