--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     margin: 5px;
 }
 
+button {
+    margin-top: 15px;
+}
+
 @media screen and (max-width: 600px) {
     #el-5 {
         display: none;
